# py-tools

./: README.md  pyproject.toml
.github/workflows/: release.yml
highlight-pdf/: highlight.py  requirements.txt
src/py_tools/: cli.py
src/py_tools/compress_pdf/: cli.py  compress.py
src/py_tools/highlight_pdf/: __init__.py  cli.py  highlight.py
