[tool.poetry]
name = "py-tools"
version = "0.1.0"
description = "Python CLI Tools Collection"
authors = ["Daniel Hilmer <daniel.hilmer@outlook.de>"]
readme = "README.md"
packages = [{include = "py_tools", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
pymupdf = "^1.26.7"
rich = "^14.2.0"
typer = "^0.21.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"

[tool.poetry.scripts]
py-tools = "py_tools.cli:app"
highlight-pdf = "py_tools.highlight_pdf.cli:app"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
